-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14
-
Component/s: hotspot
-
b21
-
arm
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8251389 | 11.0.9 | Coleen Phillimore | P4 | Resolved | Fixed | b03 |
(issue reported by christoph.goettschkes@microdoc.com)
oop::register_oop() is only used in fastdebug builds for the CheckUnhandledOops feature. The assert requires the PC of the current frame to be non-zero. In 32-bit ARM, this is only true if the VM is not compiled in thumb mode. In thumb mode, os::current_frame() always returns a default frame, in which the PC (and every other field) is zero.
oop::register_oop() is only used in fastdebug builds for the CheckUnhandledOops feature. The assert requires the PC of the current frame to be non-zero. In 32-bit ARM, this is only true if the VM is not compiled in thumb mode. In thumb mode, os::current_frame() always returns a default frame, in which the PC (and every other field) is zero.
- backported by
-
JDK-8251389 Wrong assumption in assertion in oop::register_oop
-
- Resolved
-