8231953: Wrong assumption in assertion in oop::register_oop

On ARM32 thumb mode, the pc of the current frame is always zero

Reviewed-by: coleenp, dcubed